# Anaerobic_digestion_BioreactorsModels_data_analyses

./: .gitignore  README.md  configs.py  main.py  main2  model_evaluation.py  processamento.py  processamentoBioreactor.py  processamento_HRT.py  pyproject.toml  requirements.txt  shap_plots.py  teste.py  utils.py
models/: best_AdaBoost_model.pkl  best_Bagging_model.pkl  best_Decision Tree_model.pkl  best_Extra Trees_model.pkl  best_Gradient Boosting_model.pkl  best_K-Neighbors_model.pkl  best_LightGBM_model.pkl  best_Logistic Regression_model.pkl  best_Naive Bayes_model.pkl  best_Random Forest_model.pkl  best_SGD_model.pkl  best_SVM_model.pkl
notebooks/: Analise_NMDS_alpha.ipynb
outputs/Bettle/best_models/: best_AdaBoost_model.pkl  best_Bagging_model.pkl  best_Decision Tree_model.pkl  best_Extra Trees_model.pkl  best_Gradient Boosting_model.pkl  best_K-Neighbors_model.pkl  best_Logistic Regression_model.pkl  best_Naive Bayes_model.pkl  best_Random Forest_model.pkl  best_SGD_model.pkl  best_SVM_model.pkl
outputs/Bettle/gridsearch_results/: gridsearch_AdaBoost_results.xlsx  gridsearch_Bagging_results.xlsx  gridsearch_Decision Tree_results.xlsx  gridsearch_Extra Trees_results.xlsx  gridsearch_Gradient Boosting_results.xlsx  gridsearch_K-Neighbors_results.csv  gridsearch_K-Neighbors_results.xlsx  gridsearch_LightGBM_results.xlsx  gridsearch_Logistic Regression_results.xlsx  gridsearch_Naive Bayes_results.xlsx  (+3 more)
scripts/: configs.py  job.py  limeplots.py  main.py  main2  model_evaluation.py  processamentoBioreactor.py  processamento_HRT.py  shap_plots.py  utils.py
(+84 files in other folders)
