[tool.poetry]
name = "analise-de-dados"
version = "0.1.0"
description = "Projeto de análise de dados com visualizações e aprendizado de máquina"
authors = ["Ana Julia Tendulini <ana.tendulini@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.0"
matplotlib = "^3.9.2"
seaborn = "^0.12.2"
pandas = "^2.2.2"
scikit-learn = "^1.3.1"
lightgbm = "^4.0.0"
xgboost = "^1.7.6"
shap = "^0.42.0"
lime = "^0.2.0.1"
imblearn = "^0.10.1"
ipython = "^8.15.0"
openpyxl = "^3.1.2"
scikit-bio = "^0.5.10"
scipy = "^1.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
